fixed local url

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>this is index</h2>
 
     <script>
     function generateRandomString(length) {
@@ -35,7 +36,7 @@
     }
 
     const clientId = '5d2c26f8146946acadf06485d7600ce7';
-    const redirectUri = 'http://localhost:5500/spotify%20api/redirect.html';
+    const redirectUri = 'http://localhost:5500/redirect.html';
 
     let codeVerifier = generateRandomString(128);
 
