--- a/redirect.html
+++ b/redirect.html
@@ -6,13 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>this is redirect</h2>
 
     <script>
     const urlParams = new URLSearchParams(window.location.search);
     let code = urlParams.get('code');
 
     const clientId = '5d2c26f8146946acadf06485d7600ce7';
-    const redirectUri = 'http://localhost:5500/spotify%20api/redirect.html';
+    const redirectUri = 'http://localhost:5500/redirect.html';
 
     let codeVerifier = localStorage.getItem('code_verifier');
 
@@ -59,8 +60,6 @@
     const data = await response.json();
     console.log(data);
     }
-
-
     </script>
     
 </body>
