--- a/redirect.html
+++ b/redirect.html
@@ -14,8 +14,8 @@
         <input type="submit">
     </form>
 
-    <span class="name"></span>
-    <span class="genre"></span>
+    <span class="name" style="display: flex; align-items: start;"></span>
+    <span class="genre" style="display: flex; align-items: start;"></span>
     <span class="image"></span>
 
 
@@ -85,9 +85,9 @@
 
     const data2 = await response2.json();
     console.log(data2);
-    document.getElementsByClassName("name")[0].innerHTML = data2.name;
-    document.getElementsByClassName("genre")[0].innerHTML = data2.genres;
-    document.getElementsByClassName("image")[0].innerHTML = data2.images[1].url;
+    document.getElementsByClassName("name")[0].innerHTML = "name: " + data2.name;
+    document.getElementsByClassName("genre")[0].innerHTML = "genres: " + data2.genres;
+    document.getElementsByClassName("image")[0].innerHTML = `<image src = ${data2.images[1].url}>`;
     };
     getArtistData();
 
