--- a/index.html
+++ b/index.html
@@ -1,63 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+
     <script>
-    function generateRandomString(length) {
-    let text = '';
-    let possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+        function generateRandomString(length) {
+            let text = '';
+            let possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
 
-    for (let i = 0; i < length; i++) {
-        text += possible.charAt(Math.floor(Math.random() * possible.length));
-    }
-    return text;
-    }
+            for (let i = 0; i < length; i++) {
+                text += possible.charAt(Math.floor(Math.random() * possible.length));
+            }
+            return text;
+        }
 
-    async function generateCodeChallenge(codeVerifier) {
-    function base64encode(string) {
-    return btoa(String.fromCharCode.apply(null, new Uint8Array(string)))
-      .replace(/\+/g, '-')
-      .replace(/\//g, '_')
-      .replace(/=+$/, '');
-    }
+        async function generateCodeChallenge(codeVerifier) {
+            function base64encode(string) {
+                return btoa(String.fromCharCode.apply(null, new Uint8Array(string)))
+                    .replace(/\+/g, '-')
+                    .replace(/\//g, '_')
+                    .replace(/=+$/, '');
+            }
 
-    const encoder = new TextEncoder();
-    const data = encoder.encode(codeVerifier);
-    const digest = await window.crypto.subtle.digest('SHA-256', data);
+            const encoder = new TextEncoder();
+            const data = encoder.encode(codeVerifier);
+            const digest = await window.crypto.subtle.digest('SHA-256', data);
 
-    return base64encode(digest);
-    }
+            return base64encode(digest);
+        }
 
-    const clientId = '5d2c26f8146946acadf06485d7600ce7';
-    const redirectUri = 'http://localhost:5500/redirect.html';
+        const clientId = '5d2c26f8146946acadf06485d7600ce7';
+        const redirectUri = 'http://localhost:5500/redirect.html';
 
-    let codeVerifier = generateRandomString(128);
+        let codeVerifier = generateRandomString(128);
 
-    generateCodeChallenge(codeVerifier).then(codeChallenge => {
-    let state = generateRandomString(16);
-    let scope = 'user-read-private user-read-email';
+        generateCodeChallenge(codeVerifier).then(codeChallenge => {
+            let state = generateRandomString(16);
+            let scope = 'user-read-private user-read-email user-library-read';
 
-    localStorage.setItem('code_verifier', codeVerifier);
+            localStorage.setItem('code_verifier', codeVerifier);
 
-    let args = new URLSearchParams({
-        response_type: 'code',
-        client_id: clientId,
-        scope: scope,
-        redirect_uri: redirectUri,
-        state: state,
-        code_challenge_method: 'S256',
-        code_challenge: codeChallenge
-    });
+            let args = new URLSearchParams({
+                response_type: 'code',
+                client_id: clientId,
+                scope: scope,
+                redirect_uri: redirectUri,
+                state: state,
+                code_challenge_method: 'S256',
+                code_challenge: codeChallenge
+            });
 
-    window.location = 'https://accounts.spotify.com/authorize?' + args;
-    });
+            window.location = 'https://accounts.spotify.com/authorize?' + args;
+        });
 
     </script>
 </body>
+
 </html>
