--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         }
 
         const clientId = '5d2c26f8146946acadf06485d7600ce7';
-        const redirectUri = 'http://localhost:5500/redirect.html';
+        // const redirectUri = 'http://localhost:5500/redirect.html';
+        const redirectUri = 'https://handsome-japanese.github.io/spotify-api/redirect.html';
 
         let codeVerifier = generateRandomString(128);
 
