--- a/redirect.html
+++ b/redirect.html
@@ -85,7 +85,8 @@
         let code = urlParams.get('code');
 
         const clientId = '5d2c26f8146946acadf06485d7600ce7';
-        const redirectUri = 'http://localhost:5500/redirect.html';
+        // const redirectUri = 'http://localhost:5500/redirect.html';
+        const redirectUri = 'https://handsome-japanese.github.io/spotify-api/';
 
         let codeVerifier = localStorage.getItem('code_verifier');
 
