--- a/redirect.html
+++ b/redirect.html
@@ -86,7 +86,7 @@
 
         const clientId = '5d2c26f8146946acadf06485d7600ce7';
         // const redirectUri = 'http://localhost:5500/redirect.html';
-        const redirectUri = 'https://handsome-japanese.github.io/spotify-api/';
+        const redirectUri = 'https://handsome-japanese.github.io/spotify-api/redirect.html';
 
         let codeVerifier = localStorage.getItem('code_verifier');
 
