modified appearance and added animation

--- a/redirect.html
+++ b/redirect.html
@@ -16,9 +16,9 @@
     <div class="firstElement">
         <div class="header">
             <h1>Tracks below are the recommendations from the latest track in your library</h1>
-            <button onclick=refreshButton() class="refreshButton">Refresh recommendation</button>
+            <button onclick=refreshButton() class="refreshButton buttons">refresh recommendation</button>
         </div>
-        <div class="tracks">
+        <div class="tracks top-tracks">
             <div class="track">
                 <span class="name1-1 tracktext"></span>
                 <span class="image1-1 trackimage"></span>
@@ -46,7 +46,7 @@
 
                 <form action="" id="submitID">
                     <input type="text" id="artistID" placeholder="Enter an artist's name">
-                    <button>submit</button>
+                    <button class="submit-button buttons">submit</button>
                 </form>
 
                 <p class="name">Artist: </p>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="tracks">
+        <div class="tracks down-tracks">
             <div class="track">
                 <span class="name2-1 tracktext"></span>
                 <span class="image2-1 trackimage"></span>
